<resources>
    <string name="app_name">OlympicMap</string>
    <string name="app_name_with_space">Olympic<br/>Map</string>
    <string name="whats_your_name">Как мы можем вас звать?</string>
    <string name="skip">Пропустить</string>
    <string name="next">Продолжить</string>
    <string name="info">Введение</string>
    <string name="enter_name">Введите имя</string>
    <string name="defaultName">Пользователь</string>
    <string name="input_error">Ошибка ввода</string>
    <string name="incorrect_name_text">Поле может содержать только буквы, цифры и знак подчеркивания и быть не короче трёх символов</string>
    <string name="settings">Настройки</string>
    <string name="switch_on_advices">Включить подсказки</string>
    <string name="switch_off_advices">Выключить подсказки</string>
    <string name="map">Карта</string>
    <string name="advice">Подсказка</string>
    <string name="advice_text">Вы можете нажать на картинку, чтобы получить дополнительную информацию о ней</string>
    <string name="selected">Избранные</string>
    <string name="greeting">Здравствуй,</string>
    <string name="change_name">Изменить имя</string>
    <string name="example_name">John The First</string>
    <string name="example_title">Example title</string>
    <string name="olympic_fire">Олимпийский огонь</string>
    <string name="olympic_fire_text_part1">Был зажжен 18 октября 2021 в храме богини Геры, Греция, остров Пелопоннес. На церемонии </string>
    <string name="olympic_fire_text_part2">присутствовали президент Греции (Катерина Сакелларопулу) и призидент Международного Олимпийского Комитета. Из-за ковидных ограничений зрителей на ней не было.</string>
    <string name="volunteering">Волонтёрство</string>
    <string name="volunteering_part1">Еще 5 декабря 2019 (!) был запущен набор волонтёров для подготовки к Зимним Олимпийским Играм. Их распределяли по трём зонам: Пекин, Яньцин и Чжанцзякоу.</string>
    <string name="volunteering_part2">Волонтёром мог стать любой желающий из любой страны мира, совершеннолетний на момент 1 января 2022 года и знающий китайский или английский языки.</string>
    <string name="countries_take_part">Страны-участники</string>
    <string name="counties_take_part_text">Всего в олимпийских играх принял участие 91 национальный олимпийский комитет (НОК). Из них только 27 смогли получить медали.</string>
    <string name="medals">Медали</string>
    <string name="coins">Памятные монеты</string>
    <string name="coins_text">Банк Китая выпустил серию памятных монет, посвященных Олимпиаде-2022.</string>
    <string name="example_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="gold">Золото</string>
    <string name="silver">Серебро</string>
    <string name="bronze">Бронза</string>
    <string name="total">Всего</string>
    <string name="national_olympic_party">НОК</string>
    <string name="greece_president">Катерина Сакелларопулу</string>
    <string name="greece_president_info">Катерина Сакелларопулу — греческий государственный и политический деятель, 13-й президент Греции (восьмой в истории нынешней Третьей Греческой Республики). Вступила в должность 13 марта 2020 года. Была избрана 22 января 2020 года преемником президента Прокописа Павлопулоса парламентом Греции. До своего избрания, с октября 2018 года занимала должность председателя Государственного совета, высшего административного суда Греции.</string>
    <string name="mok_president">Томас Бах</string>
    <string name="mok_president_info">Томас Бах  — деятель немецкого и международного олимпийского движения, президент Международного олимпийского комитета с 10 сентября 2013 года, в прошлом — президент Олимпийской спортивной конфедерации Германии. Президент апелляционного комитета Спортивного арбитражного суда. В прошлом — фехтовальщик на рапирах, олимпийский чемпион 1976 года в командном первенстве, чемпион мира 1977 года в командном первенстве. По образованию юрист, окончил университет Вюрцбурга. Свободно говорит, помимо родного немецкого, на французском, английском и испанском языках.</string>
    <string name="beijing">Пекин</string>
    <string name="beijing_info">Пекин (в переводе «Северная столица») — столица и один из городов центрального подчинения Китайской Народной Республики. Пекин с трёх сторон окружён провинцией Хэбэй и граничит с Тяньцзинем на юго-востоке.\nЭто крупнейший железно- и автодорожный узел и один из основных авиаузлов страны. Кроме того, Пекин является политическим, образовательным и культурным центром КНР, в то время как главными экономическими центрами считаются Шанхай, Гуанчжоу, Шэньчжэнь и Гонконг. Вместе с тем, начиная с конца 1990-х годов всё больше берёт на себя роль локомотива предпринимательской деятельности и основного поля для создания инновационных предприятий.\nВходит в число четырёх древних столиц Китая. В 2008 году в городе прошли Летние Олимпийские игры и Летние Паралимпийские игры, в 2015 году — Чемпионат мира по лёгкой атлетике, в 2022 году — Зимние Олимпийские игры и Зимние Паралимпийские игры.\nСогласно переписи 2020 года, в Пекине проживало 21,893 млн человек.</string>
    <string name="chanzoi">Чжанцзякоу</string>
    <string name="chanzoi_info">Чжанцзякоу, прежде известный как Калга́н, — городской округ в провинции Хэбэй КНР на реке Янхэ.\nЧжанцзякоу возник и развивался как пограничная застава на Великой Китайской стене, и представлял собой главные ворота в Китай из Внутренней Монголии. Часть территории современного городского округа, лежащая южнее Стены, входила в территорию различных китайских государственных образований, а севернее — была зоной кочевых народов.</string>
    <string name="coins_info">Центральный банк Китая принял решение о выпуске 12 памятных монет, посвященных зимним Олимпийским играм 2022 года в Пекине, начиная с 26 октября.\nВсе монеты являются законным платежным средством в стране. Они представляют из себя набор из 10 монет, четыре из которых изготовлены из золота, и шесть - из серебра, а также набор из двух монет, изготовленных из медного сплава.\nНа аверсе всех золотых и серебряных монет изображена официальная эмблема 24-х зимних Олимпийских игр, а также дополнительные элементы: Великая китайская стена и снежинки.\nРеверс монет украшен различными изображениями, включая талисманы 24-х зимних Олимпийских игр и элементы различных зимних видов спорта.\nЛицевая сторона монет из медного сплава украшена официальной эмблемой 24-х зимних Олимпийских игр, а также изображениями Великой китайской стены и снежных гор.</string>
    <string name="options">Опции</string>
    <string name="show_clusters">Показать страны-участники</string>
    <string name="hide_clusters">Скрыть страны-участники</string>
    <string name="goto_beijing">Перейти к месту проведения Олимпийских игр</string>
</resources>
